Implement 10 player pods and swiss pairings
