# backend/src/entity/Cube.ts
@@ -30,6 +30,9 @@ export class Cube {
   @Column({ nullable: true })
   imageUrl: string;
 
+  @Column({ type: "integer", default: 360 })
+  cardCount: number;
+
   @ManyToOne(() => CardList, { nullable: true })
   cardlist: CardList;
 
